# whycon-orig

./: CMakeLists.txt  README.md  keyFile  package.sh  package.xml
cfg/: whycon.cfg
doc/: cards.fig
etc/: .gitignore  CNecklace.cpp  Calib_Results.m  Makefile  camera.cfg  create.sh  default.cal  neclage.cpp
id/: CNecklace.cpp  CNecklace.h  Makefile  create.sh  neclage.cpp  whycon-id-gen  whycon-id-gen.cpp
launch/: whycon-nogui.launch  whycon.launch
msg/: Marker.msg  MarkerArray.msg
src/: CCircleDetect.cpp  CCircleDetect.h  CGui.cpp  CGui.h  CNecklace.cpp  CNecklace.h  CRawImage.cpp  CRawImage.h  CTimer.cpp  CTimer.h  CTransformation.cpp  CTransformation.h  CWhycon.cpp  CWhycon.h  Makefile  SStructDefs.h  whycon.cpp
src/Mk/: local.Mk
src/camera/: CCamera.cpp  CCamera.h  Makefile  avilib.c  avilib.h  utils.c  utils.h  v4l2uvc.c  v4l2uvc.h
src/common/: CDump.cpp  CDump.h  CMessage.cpp  CMessage.h  CMessageClient.cpp  CMessageClient.h  CPoint.cpp  CPoint.h  CPosition.cpp  CPosition.h  CRawImage.cpp  CRawImage.h  CThread.cpp  CThread.h  Makefile  cmath.cpp  cmath.h
src/gui/: CGui.cpp  CGui.h  Makefile
src/imageproc/: CCircleDetect.cpp  CCircleDetect.h  CNecklace.cpp  CNecklace.h  CPositionServer.cpp  CPositionServer.h  CTransformation.cpp  CTransformation.h  Makefile
src/main/: Makefile  swarmcon.cpp  whycon.cpp
