<?xml version="1.0"?>
<package>
  <name>whycon_ros</name>
  <version>0.1.3</version>
  <description>
    Implementats the WhyCon localisation system into ROS.
    MIT license is only for non-comertial use. Otherwise, please, contact us.
  </description>

  <maintainer email="jiri.ulrich@fel.cvut.cz">Jiri Ulrich</maintainer>
  <maintainer email="tomas.krajnik@fel.cvut.cz">Tom Krajnik</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <url type="website">https://github.com/gestom/whycon-orig</url>

  <author email="tomas.krajnik@fel.cvut.cz">Tom Krajnik</author>
  <author email="jiri.ulrich@fel.cvut.cz">Jiri Ulrich</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <!--<build_depend>visualization_msgs</build_depend>-->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libsdl1.2</build_depend>
  <build_depend>libsdl-ttf2.0</build_depend>
  <build_depend>libncurses5</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <!--<run_depend>visualization_msgs</run_depend>-->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>libsdl1.2</run_depend>
  <run_depend>libsdl-ttf2.0</run_depend>
  <run_depend>libncurses5</run_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
